# Spalst

./: .gitignore  Cargo.toml  LICENSE  README.md  spalst_save.ron  todo  versions.json
assets/entity_templates/core/: this_is_here_so_that_the_program_can_compile.ron
src/: consts.rs  lib.rs  main.rs  update.rs
src/consts/: bad_versions.rs  controls.rs  github.rs  github_repo_name.rs  github_repo_owner.rs  mod.rs  paths.rs  style.rs  time.rs
src/enums/: achievement_id.rs  game_menu.rs  get_input_mode.rs  level_filter_wrapper.rs  main_menu_enum.rs  manage_playthroughs_menu.rs  manage_playthroughs_selected.rs  menu.rs  merge_priority.rs  mod.rs  playthroughs_sort_by.rs  rarity.rs  select.rs  vertical_alignment.rs
src/renew_account/: mod.rs
src/structs/: _wrappers.rs  account.rs  achievement.rs  achievement_info.rs  achievement_queue.rs  achievements.rs  args_parser.rs  asset.rs  bad_version_reason.rs  bad_versions.rs  data.rs  ensure_terminal_restore.rs  entity.rs  entity_template_name.rs  entity_templates.rs  game.rs  item.rs  main_menu.rs  mod.rs  playthrough.rs  playthroughs.rs  release.rs  releases.rs  save.rs  stats.rs  version.rs
src/structs/app/: definition.rs  mod.rs
src/structs/app/display/: browsing.rs  (+6 more)
src/structs/app/display.old/: loading_account.rs  main_fn.rs  mod.rs
src/traits/: loadable.rs  loadable_safe.rs  mod.rs  saveable.rs
src/utils/: convert_path_mod.rs  create_block_mod.rs  create_popup_area_mod.rs  create_popup_mod.rs  keycode_to_string_mod.rs  keycodes_to_string_mod.rs  load_mod.rs  load_safe_mod.rs  mod.rs  time_delta_format_mod.rs
(+23 files in other folders)
