[package]
name = "spalst"
version = "1.0.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
color-eyre = "0.6.5"
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
tokio = { version = "1.47.2", features = ["full"] }
futures = "0.3.31"
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"
simplelog = "0.12.2"
assert_matches = "1.5.0"
semver = { version = "1.0.27", features = ["serde"] }
termimad = "0.34.0"
bytes = "1.11.0"
async-recursion = "1.1.1"
